[package]
name = "C10"
version = "0.1.0"
authors = ["bergabman"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tracing = "0.1.23"
tracing-subscriber = "0.2"
serenity = { version = "0.10.2", features = ["cache", "framework", "standard_framework", "rustls_backend"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.2", features = ["macros", "signal", "rt-multi-thread"] }
openssl = { version = "0.10", features = ["vendored"] }
anyhow = "1.0"
toml = "0.5"
percentage = "0.1.0"
